--- a/public/partials/welcome.html
+++ b/public/partials/welcome.html
@@ -27,7 +27,7 @@
 					</div>
 					<div class="panel-body">
 						<dl>
-							<dt><strong>¿Por qué puedo ver los detalles de un procedimiento en el apartado Actividad pero no puedo introducir datos en la anualidad actual pero sí en anteriores?</strong></dt>
+							<dt><strong>¿Por qué puedo ver los detalles de un procedimiento en el apartado Actividad pero no puedo introducir datos en la anualidad actual y sí en anteriores?</strong></dt>
 							<dd>
 								Cada año debe confirmar los plazos máximos <em>'Plazo CS /ANS'</em> y el <em>'Plazo máximo legal para resolver'</em>. Puede especificarlo en días hábiles o en días naturales, según corresponda. Tras añadir estos datos el sistema le dejará incluir datos de actividad en la anualidad actual.
 							</dd>
